fixed clipping in desk navbar

--- a/styles/header.css
+++ b/styles/header.css
@@ -221,7 +221,7 @@ display: flex;
  .navDesk {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
  }
 
@@ -254,7 +254,7 @@ display: flex;
 
 .searchInput input {
   border-radius: 20px;
-  width: 220px;
+  width: 190px;
   height: 40px;
   position: relative;
   background: transparent url("/icons/vector\ black.svg");
@@ -268,4 +268,8 @@ display: flex;
   padding-left: 30px;
 }
 
+.langSetting {
+
+  margin-left: 10px;
+}
 }
